backend - logout controller added and now log out works and removes cookies from browser